<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            tools:context=".MainActivity"
            android:background="#ECEBE8">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#93B874"
        android:textColor="#FFFFFF"
        android:text="@string/app_intro"
        android:id="@+id/app_intro"
        android:textSize="24sp"
        android:gravity="center_horizontal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_below="@id/app_intro"
        android:text="@string/app_text"
        android:id="@+id/app_text"
        android:textSize="20sp"
        android:textColor="#444F45"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/app_text"
        android:text="@string/chinese_button"
        android:id="@+id/chinese_button"
        android:onClick="chineseOnClick"
        android:textAlignment="center"
        android:paddingTop="24dp"
        android:paddingBottom="24dp"
        android:textSize="16sp"
        android:textColor="@android:color/white"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/chinese_button"
        android:text="@string/spanish_button"
        android:id="@+id/spanish_button"
        android:onClick="spanishOnClick"
        android:textAlignment="center"
        android:paddingTop="24dp"
        android:paddingBottom="24dp"
        android:textSize="16sp"
        android:textColor="@android:color/white"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/spanish_button"
        android:text="@string/urdu_button"
        android:id="@+id/urdu_button"
        android:onClick="urduOnClick"
        android:textAlignment="center"
        android:paddingTop="24dp"
        android:paddingBottom="24dp"
        android:textSize="16sp"
        android:textColor="@android:color/white"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/urdu_button"
        android:text="@string/arabic_button"
        android:id="@+id/arabic_button"
        android:onClick="arabicOnClick"
        android:textAlignment="center"
        android:paddingTop="24dp"
        android:paddingBottom="24dp"
        android:textSize="16sp"
        android:textColor="@android:color/white"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/arabic_button"
        android:text="@string/portuguese_button"
        android:id="@+id/portuguese_button"
        android:onClick="portugueseOnClick"
        android:textAlignment="center"
        android:paddingTop="24dp"
        android:paddingBottom="24dp"
        android:textSize="16sp"
        android:textColor="@android:color/white"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_below="@id/portuguese_button"
        android:text="@string/app_help"
        android:id="@+id/app_help"
        android:textSize="20sp"
        android:gravity="center_horizontal"
        android:textColor="#444F45"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/app_help"
            android:id="@+id/feedback_buttons">

            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/yes_button"
                android:id="@+id/yes_button"
                android:onClick="yesOnClick"
                android:textAlignment="center"
                android:paddingTop="24dp"
                android:paddingBottom="24dp"
                android:textSize="16sp"
                android:textColor="@android:color/white"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/no_button"
                android:id="@+id/no_button"
                android:onClick="noOnClick"
                android:textAlignment="center"
                android:paddingTop="24dp"
                android:paddingBottom="24dp"
                android:textSize="16sp"
                android:textColor="@android:color/white"/>

        </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_below="@id/feedback_buttons"
        android:text="@string/app_credits"
        android:id="@+id/app_credits"
        android:textSize="12sp"
        android:gravity="center_horizontal"
        android:background="#93B874"
        android:textColor="#FFFFFF"/>

</RelativeLayout>

</ScrollView>